--- a/_config.yml
+++ b/_config.yml
@@ -1,109 +1,164 @@
 # Welcome to Jekyll!
-# URL: https://mmistakes.github.io/minimal-mistakes/docs/configuration
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely edit after that. If you find
-# yourself editing this file very often, consider using Jekyll's data files
-# feature for the data you need to update frequently.
 #
+# This config file is meant for settings that affect your entire site, values
+# which you are expected to set up once and rarely need to edit after that.
 # For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
+# `jekyll serve`. If you change this file, please restart the server process.
 
-# Site settings
-# These are used to personalize your new site. If you look in the HTML files,
-# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
-# You can create any custom variable you would like, and they will be accessible
-# in the templates via {{ site.myvariable }}.
-title: STiLE
-subtitle: 拾籍而上
-email: bw.yao@outlook.com
-description: >- # this means to ignore newlines until "baseurl:"
-  This is a blog about my life, my thoughts, and my work.
+# Theme Settings
+#
+# Review documentation to determine if you should use `theme` or `remote_theme`
+# https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/#installing-the-theme
 
-url: https://stile.cc/
+theme                  : "minimal-mistakes-jekyll"
+# remote_theme           : "mmistakes/minimal-mistakes"
+minimal_mistakes_skin    : "dirt" # "default"(default), "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
-# twitter_username: username
-# github_username: username
-minimal_mistakes_skin: dirt
-search: true
+# Site Settings
+locale                   : "zh-CN" # "en-US"(default), zh-CN
+rtl                      : # true, false (default) # turns direction of the page into right to left for RTL languages
+title                    : "STiLE"
+title_separator          : "-"
+subtitle                 : Doing something SIGNIFICANT. # site tagline that appears below site title in masthead
+name                     : "拾籍而上"
+description              : "This is a blog about my life, my thoughts, and my work."
+url                      : https://stile.cc # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+baseurl                  :  # the subpath of your site, e.g. "/blog"
+repository               : "DlronA/arnie-blog" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
+teaser                   : /assets/images/teaser.jpg # path of fallback teaser image, e.g. "/assets/images/500x300.png"
+logo                     :  # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
+masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
+breadcrumbs              : true # true, false (default)
+words_per_minute         : 200
+enable_copy_code_button  : true # true, false (default)
+copyright                : # "copyright" name, defaults to site.title
+copyright_url            : # "copyright" URL, defaults to site.url
+comments:
+  provider               : "giscus" # false (default), "disqus", "discourse", "facebook", "staticman", "staticman_v2", "utterances", "giscus", "custom"
+  disqus:
+    shortname            : # https://help.disqus.com/customer/portal/articles/466208-what-s-a-shortname-
+  discourse:
+    server               : # https://meta.discourse.org/t/embedding-discourse-comments-via-javascript/31963 , e.g.: meta.discourse.org
+  facebook:
+    # https://developers.facebook.com/docs/plugins/comments
+    appid                :
+    num_posts            : # 5 (default)
+    colorscheme          : # "light" (default), "dark"
+  utterances:
+    theme                : # "github-light" (default), "github-dark"
+    issue_term           : # "pathname" (default)
+  giscus:
+    repo_id              : "R_kgDOOH3UrQ" # Shown during giscus setup at https://giscus.app
+    category_name        : "Announcements" # Full text name of the category
+    category_id          : "DIC_kwDOOH3Urc4Cn-0h" # Shown during giscus setup at https://giscus.app
+    discussion_term      : "pathname" # "pathname" (default), "url", "title", "og:title"
+    reactions_enabled    : "1" # '1' for enabled (default), '0' for disabled
+    theme                : "preferred_color_scheme" # "light" (default), "dark", "dark_dimmed", "transparent_dark", "preferred_color_scheme"
+    strict               : # 1 for enabled, 0 for disabled (default)
+    input_position       : "top" # "top", "bottom" # The comment input box will be placed above or below the comments
+    emit_metadata        : # 1 for enabled, 0 for disabled (default) # https://github.com/giscus/giscus/blob/main/ADVANCED-USAGE.md#imetadatamessage
+    lang                 : # "en" (default)
+    lazy                 : true # true, false # Loading of the comments will be deferred until the user scrolls near the comments container.
+  staticman:
+    branch               : # "master"
+    endpoint             : # "https://{your Staticman v3 API}/v3/entry/github/"
+reCaptcha:
+  siteKey                :
+  secret                 :
+atom_feed:
+  path                   : # blank (default) uses feed.xml
+  hide                   : # true, false (default)
+search                   : true # true, false (default)
+search_full_content      : # true, false (default)
+search_provider          : algolia # lunr (default), algolia, google
+lunr:
+  search_within_pages    : # true, false (default)
+algolia:
+  application_id         : HCWAP315EX # YOUR_APPLICATION_ID
+  index_name             : 'jekyll_' # YOUR_INDEX_NAME
+  search_only_api_key    : 63c7abee26598ea88f5009673c80ac99 # YOUR_SEARCH_ONLY_API_KEY
+  powered_by             : true # true (default), false
+google:
+  search_engine_id       : # YOUR_SEARCH_ENGINE_ID
+  instant_search         : # false (default), true
+# SEO Related
+google_site_verification : z60wyIp80jRUQXCbvHy7BFx13IGOA_ukhyD4cFuHk6w
+bing_site_verification   : # bing site verification by google
+naver_site_verification  :
+yandex_site_verification :
+baidu_site_verification  :
 
-# Site masthead logoPermalink
-# logo: /assets/images/logo.png
+# Social Sharing
+twitter:
+  username               : "ArnoldYao18513"
+facebook:
+  username               : 
+  app_id                 :
+  publisher              :
+og_image                 : /assets/images/site-logo.png # Open Graph/Twitter default site image
+# For specifying social profiles
+# - https://developers.google.com/structured-data/customize/social-profiles
+social:
+  type                   : # Person or Organization (defaults to Person)
+  name                   : # If the user or organization name differs from the site's name
+  links: # An array of links to social media profiles
+    - "https://github.com/DlronA"
+    - "https://www.zhihu.com/people/jiang-yang-46-25"
+    - /assets/images/wechat-qr.png
+    - "mailto:bw.yao@outlook.com?subject=用户反馈&body=姓名：%0D%0A问题描述："
+# Analytics
+analytics:
+  provider               : "google-gtag" # false (default), "google", "google-universal", "google-gtag", "custom"
+  google:
+    tracking_id          : "G-9VN8L46JLC"
+    anonymize_ip         : false # true, false (default)
 
-# To assign a fallback teaser image used in the “Related Posts”
-teaser: /assets/images/teaser.jpg
 
-# Breadcrumb navigation (beta)
-breadcrumbs: true  # disabled by default
-
-# To enable a copy button on code blocks
-enable_copy_code_button: true
-
-# Build settings
-markdown: kramdown
-remote_theme: mmistakes/minimal-mistakes
-# Outputting
-permalink: /:categories/:title/
-paginate: 5 # amount of posts to show
-paginate_path: /page:num/
-timezone: # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
-
-include:
-  - _pages
-
-# Exclude from processing.
-# The following items will not be processed, by default. Create a custom list
-# to override the default setting.
-# exclude:
-#   - Gemfile
-#   - Gemfile.lock
-#   - node_modules
-#   - vendor/bundle/
-#   - vendor/cache/
-#   - vendor/gems/
-#   - vendor/ruby/
-
-# Plugins (previously gems:)
-plugins:
-  - jekyll-paginate
-  - jekyll-sitemap
-  - jekyll-gist
-  - jekyll-feed
-  - jemoji
-  - jekyll-include-cache
-
+# Site Author
 author:
-  name   : "Arnold Yao"
-  avatar : "/assets/images/bio-photo.jpg"
-  bio    : "应无所住而生其心。"
-  # location: "Beijing"
-  links:  # fa-fw 用来控制图标大小
+  name             : "拾籍而上"
+  avatar           : /assets/images/bio-photo.jpg # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+  bio              : "应无所住而生其心。"
+  location         : "海淀, 北京"
+  email            : 
+  links:
+    - label: "E-Mail"
+      icon: "fa-solid fa-fw fa-square-envelope"
+      url: "mailto:bw.yao@outlook.com?subject=用户反馈(User Feedback)&body=姓名(Name)：%0D%0A问题描述(Problem Description)："
     # - label: "Website"
     #   icon: "fas fa-fw fa-link"
-    #   url: "https://"
-    - label: "​WeChat"
-      icon: "fa-brands fa-fw fa-weixin"
-      url: "https://mp.weixin.qq.com/mp/profile_ext?action=home&__biz=MzkyMTMzODA0MQ=="
-    - label: "ZhiHu"
-      icon: "fa-brands fa-fw fa-zhihu"
-      url: "https://www.zhihu.com/people/jiang-yang-46-25"
+    #   url: "https://stile.cc"
     # - label: "Twitter"
     #   icon: "fab fa-fw fa-twitter-square"
-    #   url: "https://twitter.com/"
+    #   # url: "https://twitter.com/"
+    # - label: "Facebook"
+    #   icon: "fab fa-fw fa-facebook-square"
+    #   # url: "https://facebook.com/"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/DlronA"
-    - label: "E-Mail"
-      icon: "fa-solid fa-fw fa-square-envelope"
-      url: "mailto:bw.yao@outlook.com?subject=用户反馈&body=姓名：%0D%0A问题描述："
     # - label: "Instagram"
     #   icon: "fab fa-fw fa-instagram"
-    #   url: "https://instagram.com/"
+    #   # url: "https://instagram.com/"
+    - label: "知 乎"
+      icon: "fa-brands fa-fw fa-zhihu"
+      url: "https://www.zhihu.com/people/jiang-yang-46-25"
+    - label: "​公众号"
+      icon: "fa-brands fa-fw fa-weixin"
+      url: /assets/images/wechat-qr.png
 
+# Site Footer
 footer:
   links:
     # - label: "Twitter"
     #   icon: "fab fa-fw fa-twitter-square"
-    #   url: "https://twitter.com/"
+    #   # url:
+    # - label: "Facebook"
+    #   icon: "fab fa-fw fa-facebook-square"
+    #   # url:
+    - label: "​公众号"
+      icon: "fa-brands fa-fw fa-weixin"
+      url: /assets/images/wechat-qr.png
     - label: "Telegram"
       icon: "fa-brands fa-fw fa-telegram"
       url: "https://t.me/Arnie912"
@@ -112,11 +167,169 @@ footer:
       url: "https://github.com/DlronA"
     - label: "E-Mail"
       icon: "fa-solid fa-fw fa-square-envelope"
-      url: "mailto:bw.yao@outlook.com?subject=用户反馈&body=姓名：%0D%0A问题描述："
+      url: "mailto:bw.yao@outlook.com?subject=用户反馈(User Feedback)&body=姓名(Name)：%0D%0A问题描述(Problem Description)："
+    # - label: "GitLab"
+    #   icon: "fab fa-fw fa-gitlab"
+    #   # url:
+    # - label: "Bitbucket"
+    #   icon: "fab fa-fw fa-bitbucket"
+    #   # url:
     # - label: "Instagram"
     #   icon: "fab fa-fw fa-instagram"
-    #   url: "https://instagram.com/"
+    #   # url:
 
+
+# Reading Files
+include:
+  - .htaccess
+  - _pages
+exclude:
+  - "*.sublime-project"
+  - "*.sublime-workspace"
+  - vendor
+  - .asset-cache
+  - .bundle
+  - .jekyll-assets-cache
+  - .sass-cache
+  - assets/js/plugins
+  - assets/js/_main.js
+  - assets/js/vendor
+  - Capfile
+  - CHANGELOG
+  - config
+  - Gemfile
+  - Gruntfile.js
+  - gulpfile.js
+  - LICENSE
+  - log
+  - node_modules
+  - package.json
+  - package-lock.json
+  - Rakefile
+  - README
+  - tmp
+  - /docs # ignore Minimal Mistakes /docs
+  - /test # ignore Minimal Mistakes /test
+keep_files:
+  - .git
+  - .svn
+encoding: "utf-8"
+markdown_ext: "markdown,mkdown,mkdn,mkd,md"
+
+
+# Conversion
+markdown: kramdown
+highlighter: rouge
+lsi: false
+excerpt_separator: "\n\n"
+incremental: false
+
+
+# Markdown Processing
+kramdown:
+  input: GFM
+  hard_wrap: false
+  auto_ids: true
+  footnote_nr: 1
+  entity_output: as_char
+  toc_levels: 1..6
+  smart_quotes: lsquo,rsquo,ldquo,rdquo
+  enable_coderay: false
+
+
+# Sass/SCSS
+sass:
+  sass_dir: _sass
+  style: compressed # https://sass-lang.com/documentation/file.SASS_REFERENCE.html#output_style
+
+
+# Outputting
+permalink: /:categories/:title/
+timezone: Asia/Shanghai # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
+
+
+# Pagination with jekyll-paginate
+paginate: 5 # amount of posts to show
+paginate_path: /page:num/
+
+# Pagination with jekyll-paginate-v2
+# See https://github.com/sverrirs/jekyll-paginate-v2/blob/master/README-GENERATOR.md#site-configuration
+#   for configuration details
+pagination:
+  # Set enabled to true to use paginate v2
+  # enabled: true
+  debug: false
+  collection: 'posts'
+  per_page: 10
+  permalink: '/page/:num/'
+  title: ':title - page :num'
+  limit: 0
+  sort_field: 'date'
+  sort_reverse: true
+  category: 'posts'
+  tag: ''
+  locale: ''
+  trail:
+    before: 2
+    after: 2
+
+
+# Plugins (previously gems:)
+plugins:
+  - jekyll-paginate
+  - jekyll-sitemap
+  - jekyll-gist
+  - jekyll-feed
+  - jekyll-include-cache
+  - jekyll-archives
+
+# mimic GitHub Pages with --safe
+whitelist:
+  - jekyll-paginate
+  - jekyll-sitemap
+  - jekyll-gist
+  - jekyll-feed
+  - jekyll-include-cache
+
+
+# Archives
+#  Type
+#  - GitHub Pages compatible archive pages built with Liquid ~> type: liquid (default)
+#  - Jekyll Archives plugin archive pages ~> type: jekyll-archives
+#  Path (examples)
+#  - Archive page should exist at path when using Liquid method or you can
+#    expect broken links (especially with breadcrumbs enabled)
+#  - <base_path>/tags/my-awesome-tag/index.html ~> path: /tags/
+#  - <base_path>/categories/my-awesome-category/index.html ~> path: /categories/
+#  - <base_path>/my-awesome-category/index.html ~> path: /
+category_archive:
+  type: jekyll-archives # liquid(deafult)
+  path: /categories/
+tag_archive:
+  type: jekyll-archives # liquid(deafult)
+  path: /tags/
+# https://github.com/jekyll/jekyll-archives
+jekyll-archives:
+  enabled:
+    - categories
+    - tags
+  layouts:
+    category: archive-taxonomy
+    tag: archive-taxonomy
+  permalinks:
+    category: /categories/:name/
+    tag: /tags/:name/
+
+
+# HTML Compression
+# - https://jch.penibelst.de/
+compress_html:
+  clippings: all
+  ignore:
+    envs: development
+
+
+# Defaults
 defaults:
   # _posts
   - scope:
@@ -130,70 +343,27 @@ defaults:
       share: true
       related: true
       show_date: true
+      toc: true
+      toc_sticky: true
   # _pages
   - scope:
-      path: "_pages"
+      path: ""
       type: pages
     values:
       layout: single
       author_profile: true
+      # classes: wide
+      # toc: true
+      # toc_sticky: true
   - scope:
       path: ""
       type: tag
     values:
       author_profile: true
+      classes: wide
   - scope:
       path: ""
       type: category
     values:
       comments: false
-
-category_archive:
-  type: jekyll-archives
-  path: /categories/
-tag_archive:
-  type: jekyll-archives
-  path: /tags/
-jekyll-archives:
-  enabled:
-    - categories
-    - tags
-  layouts:
-    category: archive-taxonomy
-    tag: archive-taxonomy
-  permalinks:
-    category: /categories/:name/
-    tag: /tags/:name/
-
-
-repository: "DlronA/arnie-blog" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
-comments:
-  provider: "giscus"
-  giscus:
-    repo_id              : "R_kgDOOH3UrQ" # Shown during giscus setup at https://giscus.app
-    category_name        : "Announcements" # Full text name of the category
-    category_id          : "DIC_kwDOOH3Urc4Cn-0h" # Shown during giscus setup at https://giscus.app
-    discussion_term      : "pathname" # "pathname" (default), "url", "title", "og:title"
-    reactions_enabled    : "1" # '1' for enabled (default), '0' for disabled
-    theme                : "preferred_color_scheme" # "light" (default), "dark", "dark_dimmed", "transparent_dark", "preferred_color_scheme"
-    input_position: "top"
-    loading: "lazy"
-
-search_provider: algolia
-
-algolia:
-  application_id: HCWAP315EX # YOUR_APPLICATION_ID
-  index_name: 'jekyll_' # YOUR_INDEX_NAME
-  search_only_api_key: 63c7abee26598ea88f5009673c80ac99 # YOUR_SEARCH_ONLY_API_KEY
-  powered_by: true # true (default), false
-
-# Compressing the HTML
-compress_html:
-  clippings: all
-  ignore:
-    envs: development  # disable compression in dev environment
-
-favicon:
-  ico: "/assets/images/favicon.ico"       # 传统ICO图标
-  png: "/assets/images/favicon-96x96.png" # 现代浏览器PNG图标
-  apple_touch_icon: "/assets/images/apple-touch-icon.png" # iOS图标
+      classes: wide
