修复 Algolia 设置的可检索项错误，comments 为布尔值，不可检索！

--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ algolia:
   # 插件专用参数 (新增)
   settings:
     attributesForFaceting: ["tags"]
-    searchableAttributes: ["title", "excerpt", "content", "categories", "tags", "comments", "date"]
+    searchableAttributes: ["title", "excerpt", "content", "categories", "tags", "date"]
   files_to_exclude:
     - _drafts/*.md
     - node_modules/**/*
