--- a/_config.yml
+++ b/_config.yml
@@ -240,16 +240,15 @@ incremental: false
 # Kramdown
 # Ref: https://kramdown.gettalong.org/options.html
 kramdown:
-  input: GFM
   math_engine: mathjax
-  # hard_wrap: false
-  # auto_ids: true
-  # footnote_nr: 1
-  # entity_output: as_char
-  # toc_levels: 1..6
-  # smart_quotes: lsquo,rsquo,ldquo,rdquo
-  # enable_coderay: false
-  parse_block_html: true
+  input: GFM
+  hard_wrap: false
+  auto_ids: true
+  footnote_nr: 1
+  entity_output: as_char
+  toc_levels: 1..6
+  smart_quotes: lsquo,rsquo,ldquo,rdquo
+  enable_coderay: false
 
 # CommonMarkGhPages:
 # Ref: https://github.com/github/jekyll-commonmark-ghpages
